2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-utils.c:
	* libempathy/empathy-contact-factory.c: Fix 2 leaks thanks to valgrind.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* tests/contact-manager.c:
	* tests/Makefile.am: No need to init gtk, GMainLoop is enough and makes
	easier to run valgrind.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-avatar.c: Fix leak when loading avatar from cache.
	* libempathy/empathy-contact-factory.c: Do not request avatar for
	unknown tokens, wait for AvatarUpdate signal.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Set the sort function before
	begin to sort otherwise we get warnings.

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h:
	* libempathy/empathy-avatar.c:
	* libempathy/empathy-avatar.h:
	* libempathy/empathy-contact-factory.c: Cache avatars and RequestAvatars
	only when needed.

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Fix capabilities update, the NOT
	operator is ~ and not !

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy-gtk/empathy-main-window.c: Fix warning when sort criterium
	is NULL and when there is no profile. Fixes bug #479786
	(Christian Persch, Xavier Claessens).

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-log-manager.c: Ignore log files that don't have a
	good filename. Fixes bug #462046 (Michael Scherer).
	* configure.ac: Bump GLIB version to 2.14.0.

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* doc/libempathy-gtk/Makefile.am: Explicitely use libempathy from
	builddir. Fixes bug #478558 (Frederic Peters).

2007-09-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat.c: Move TP_CHANNEL_CHAT_STATE_PAUSED to